# Dezain

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  walkthrough_dezain
.github/workflows/: ci.yml
dezain/: __init__.py  cli.py  config.py  ir.py  pipeline.py
dezain/design_system/: __init__.py  registry.py  tokens.py
dezain/figma/: __init__.py  client.py  parser.py  types.py
dezain/generator/: __init__.py  orchestrator.py  prompts.py  types.py  writer.py
dezain/preview/: scaffold.py  server.py
dezain/validation/: __init__.py  validator.py
samples/: sample-figma-response.json
tests/: conftest.py  test_cli.py  test_config.py  test_design_tokens.py  test_figma_client.py  test_figma_parser.py  test_orchestrator.py  test_pipeline.py  test_preview.py  test_prompts.py  test_registry.py  test_validator.py  test_writer.py
